# DSDB

./: .gitignore  CMakeLists.txt  Dockerfile.emscripten  Makefile  README.md  next.config.mjs  package.json
.github/: FUNDING.yml
.github/workflows/: build-and-deploy.yml
app/: globals.css  layout.tsx  page.tsx
components/: batch-executor.tsx  file-upload.tsx  guide-modal.tsx  query-history.tsx  results-table.tsx  schema-panel.tsx  sql-editor.tsx
components/ui/: button.tsx  tabs.tsx
examples/: FinalTest.txt
hooks/: use-database.ts
lib/: sql-parser.ts  wasm-loader.ts
public/: sample-batch.txt
src/: arrayfunctions.h  bplustree.h  main.cpp  mmap.h  mpair.h  pair.h  parser.cpp  record.cpp  sql.cpp  state_machine.cpp  stokenizer.cpp  table.cpp  token.cpp  wasm_interface.cpp
styles/: globals.css
